--- a/app/assets/css/material-dashboard.css
+++ b/app/assets/css/material-dashboard.css
@@ -5189,16 +5189,24 @@ td .inline {
     display: none;
 }
 
+[id^="sim"] label { 
+    display: initial;
+}
+
 [id^="sim"]:not(checked) + label {
     background-color: #f2f2f2;
 }
 
 [id^="sim"]:not(checked) + label:hover {
-    background-color: #f2f2f2;
+    background-color: #26c6da;
 }
 
 [id^="sim"]:checked + label { 
     background-color: #26c6da;
+}
+
+#statsim { 
+    display: initial; 
 }
 
 /* Minimally Invasive Toggle*/
@@ -5215,10 +5223,31 @@ td .inline {
 }
 
 [id^="mi"]:not(checked) + label:hover {
-    background-color: #f2f2f2;
+    background-color: #26c6da;
 }
 
 [id^="mi"]:checked + label { 
+    background-color: #26c6da;
+}
+
+/* Conversion Invasive Toggle*/
+
+[id^="con"]{ 
+    position: relative;
+    appearance: none;
+    cursor: pointer;
+    display: none;
+}
+
+[id^="con"]:not(checked) + label {
+    background-color: #f2f2f2;
+}
+
+[id^="con"]:not(checked) + label:hover {
+    background-color: #26c6da;
+}
+
+[id^="con"]:checked + label { 
     background-color: #26c6da;
 }
 
