--- a/app/assets/css/material-dashboard.css
+++ b/app/assets/css/material-dashboard.css
@@ -3543,6 +3543,14 @@ select.form-control[multiple],
     position: relative;
 }
 
+td.text.text-left{
+    max-width: 120px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
 .checkbox label {
     cursor: pointer;
     padding-left: 0;
