--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -47,3 +47,17 @@
 .ct-char {
     stroke-width: 60px
 }
+
+.anores{
+    background-color: black;
+    width: 30px;
+    height:30px;
+    position: absolute;
+    top:70%;
+    left: 58%;
+    border-radius: 50%;
+    color: white;
+    display:flex;
+    align-items:center;
+    justify-content: space-around;
+}
