--- a/app/assets/css/material-dashboard.css
+++ b/app/assets/css/material-dashboard.css
@@ -6774,7 +6774,7 @@ td .inline {
         left: auto;
         z-index: 1032;
         visibility: visible;
-        background-color: #9A9A9A;
+        background-color: #FFFFFF;
         overflow-y: visible;
         border-top: none;
         text-align: left;
@@ -6806,7 +6806,7 @@ td .inline {
         height: 100%;
         width: 100%;
         position: absolute;
-        background-color: #282828;
+        background-color: #ffffff;
         display: block;
         content: "";
         z-index: 1;
