agregué la pagina de bienvenida

--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -1,3 +1,6 @@
+html a{
+    cursor: pointer;
+}
 .circular-container{
 	width:10%;
 	margin: 0 auto;
@@ -106,3 +109,4 @@
 .noUi-tooltip {
     margin-top: 10px;
 }
+
