--- a/assets2/css/ct-paper.css
+++ b/assets2/css/ct-paper.css
@@ -16,6 +16,12 @@
 
 /*      light colors - used for select dropdown         */
 /*           Font Smoothing      */
+@font-face {
+  font-family: 'fox-cat';
+  src: url('../fonts/fox-cat.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .navbar, .brand, a, .td-name, td {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
