--- a/public/app/assets/css/custom.css
+++ b/public/app/assets/css/custom.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'fox-cat';
+  src: url('../../../assets2/fonts/fox-cat.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
 html a{
     cursor: pointer;
 }
@@ -172,3 +178,16 @@ html a{
     margin-top: 10px;
 }
 
+.myLabel {
+  display: inherit;
+}
+
+.myDashCard {
+  min-height: 183px;
+}
+
+.myDashCardFooter {
+  bottom: 0px;
+  position: absolute;
+  width: 80%;
+}
